@@ -10,7 +10,6 @@ HIGHEST
 
 HIGH
 - Solutions: flip everything LTR, fix problems that flipping 'Basics' caused
-- Custom: flip everything LTR
 - Solutions: log graph, not interactive
 - when beaker is emptied, try setting values in graph indicators to '0' and position them below 10^-16 (or position at '0' on linear)
 - Custom: interactive log graph
