@@ -26,12 +26,15 @@ define( function( require ) {
 
     var thisModel = this;
 
+    // Beaker and the stuff that is positioned relative to it.
     thisModel.water = Water;
-    thisModel.beaker = new Beaker( new Vector2( 330, 550 ), new Dimension2( 400, 325 ) );
+    thisModel.beaker = new Beaker( new Vector2( 720, 550 ), new Dimension2( 400, 325 ) );
     var yDropper = 210;
-    thisModel.dropper = new Dropper( Solute.CUSTOM, new Vector2( thisModel.beaker.location.x + 40, yDropper ), new Bounds2( 225, yDropper, 500, yDropper ) );
+    thisModel.dropper = new Dropper( Solute.CUSTOM,
+      new Vector2( thisModel.beaker.location.x, yDropper ),
+      new Bounds2( thisModel.beaker.left + 40, yDropper, thisModel.beaker.right - 40, yDropper ) );
     thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume );
-    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 100, 602 ), thisModel.beaker.right,
+    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 75, thisModel.beaker.location.y + 43 ), thisModel.beaker.right,
       { enabled: thisModel.solution.volumeProperty.get() > 0 } );
 
     // Enable faucets and dropper based on amount of solution in the beaker.
