@@ -1,3 +1,4 @@
+12/10/13 Custom: flip everything LTR
 12/9/13 Basics: anchor combo box on it's left edge, for i18n
 12/9/13 fix color of PHValueNode and ExpandCollapseBar, use sRGB
 12/9/13 shorten vertical pipe on drain faucet, so that pH probe fits below it
